server/src/main/java/com/example/quizquadrant/utils/error/UnauthorizedAccessError.java
package com.example.quizquadrant.utils.error;

public class UnauthorizedAccessError extends BaseError {
    public UnauthorizedAccessError() {
        super(401, "Unauthorized Access");
    }
    public UnauthorizedAccessError(String errorMsg) {
        super(401, errorMsg);
    }
}
